Updated file names to be more consistent and moved the app component into the components directory. Also fixed a const array formatting issue with the route config.

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -1,5 +1,6 @@
   <h1>Component Router</h1>
   <nav>
     <a [routerLink]="['Home']">Home</a>
+    <a [routerLink]="['Profile']">Profile</a>
   </nav>
   <router-outlet></router-outlet>
